--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 <body>
   <div>
     <p>This is a test.</p>
+    <img src="Logo.jpg" alt="HTML5" style="width:128px;height:128px">
   </div>
 </body>
 </html>
