--- a/test.html
+++ b/test.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <title>Bryce D. Payne</title>
+  <style>img {
+    width: 100%;
+    }
+  </style>
 </head>
 <body>
   <div>
