--- a/test.html
+++ b/test.html
@@ -4,13 +4,14 @@
   <title>Bryce D. Payne</title>
   <style>img {
     width: 100%;
+    height: auto;
     }
   </style>
 </head>
 <body>
   <div>
     <p>This is a test.</p>
-    <img src="Logo.jpg" alt="HTML5" style="width:128px;height:128px">
+    <img src="Logo.jpg" alt="Bryce Payne Logo">
   </div>
 </body>
 </html>
