--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
 <head>
   <title>Bryce D. Payne</title>
-  <style>img {
+  <style>
+    body {
+     width: 95%;
+      margin: 0 auto;
+    }
+    img {
     width: 100%;
     height: auto;
+    }
+    p {
+     text-align: center; 
     }
   </style>
 </head>
 <body>
   <div>
     <img src="Logo.jpg" alt="Bryce Payne Logo">
+    <p> Under construction. Please check back soon!</p>
   </div>
 </body>
 </html>
