--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       margin: 0 auto;
     }
     img {
-    width: 100%;
+    width: 80%;
     height: auto;
     }
     p {
@@ -19,7 +19,9 @@
 <body>
   <div>
     <img src="Logo.jpg" alt="Bryce Payne Logo">
-    <p> Under construction. Please check back soon!</p>
+  </div>`
+  <div>
+    <p>Under construction. Please check back soon!</p>
   </div>
 </body>
 </html>
