--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <title>Bryce D. Payne</title>
   <style>
     body {
-     width: 95%;
+      width: 95%;
       margin: 0 auto;
     }
     img {
-    width: 80%;
-    height: auto;
+      position: relative;
+      width: 80%;
+      height: auto;
+      margin: 0 auto;
     }
     p {
-     text-align: center; 
+      text-align: center; 
     }
   </style>
 </head>
