--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <title>Bryce D. Payne</title>
+  <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
   <style>
     body {
       width: 95%;
       margin: 0 auto;
+      font-family: 'Yatra One', cursive;
     }
     img {
       position: relative;
+      display: block;
       width: 80%;
       height: auto;
       margin: 0 auto;
