--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       width: 95%;
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
+      font-size: 200%;
     }
     img {
       position: relative;
@@ -24,7 +25,7 @@
 <body>
   <div>
     <img src="Logo.jpg" alt="Bryce Payne Logo">
-  </div>`
+  </div>
   <div>
     <p>Under construction. Please check back soon!</p>
   </div>
