--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     p {
       text-align: center; 
     }
+    @media screen only and (max-width: 735px){
+      font-size: 125%; 
+    }
   </style>
 </head>
 <body>
