--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     p {
       text-align: center; 
     }
-    @media screen only and (max-width: 735px){
-      font-size: 125%; 
+    @media screen and (max-width: 735px){
+      /*font-size: 125%; */color: red;
     }
   </style>
 </head>
