--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
       font-size: 200%;
+      background-color: black;
     }
     img {
       position: relative;
