--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
       font-size: 200%;
-      background-color: black;
+      background-color: green;
     }
     img {
       position: relative;
@@ -22,7 +22,10 @@
       text-align: center; 
     }
     @media screen and (max-width: 735px){
-      /*font-size: 125%; */color: red;
+      p {
+        font-size: 125%; 
+        color: red;
+      }
     }
   </style>
 </head>
