--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       width: 80%;
       height: auto;
       margin: 0 auto;
+      background-color: green;
     }
     p {
       text-align: center; 
