--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     @media screen and (max-width: 735px){
       p {
         font-size: 60%; 
-        color: red;
+        color: yellow;
       }
     }
   </style>
