--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <style>
     body {
       width: 95%;
+      height: 95%;
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
       font-size: 200%;
