--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <style>
     body {
       width: 95%;
-      height: 95%;
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
       font-size: 200%;
@@ -17,7 +16,7 @@
       display: block;
       width: 80%;
       height: auto;
-      margin: 0 auto;
+      margin: 10px auto 0 auto;
       background-color: green;
     }
     p {
