--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       height: auto;
       margin: 75px auto 0 auto;
       background-color: green;
+      border-style: ridge;
     }
     p {
       text-align: center; 
