--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       height: auto;
       margin: 75px auto 0 auto;
       background-color: green;
-      border-style: ridge 10px blue;
+      border-style: ridge;
+      border: 10px blue;
     }
     p {
       text-align: center; 
