--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       height: auto;
       margin: 75px auto 0 auto;
       background-color: green;
-      border: 10px blue;
+      border: 10px dark green;
       border-style: ridge;
     }
     p {
