--- a/index.html
+++ b/index.html
@@ -30,11 +30,28 @@
         color: yellow;
       }
     }
+        .effect6
+          {
+              position:relative;       
+                  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+          }
+        .effect6:before, .effect6:after
+          {
+            content:"";
+              position:absolute; 
+              z-index:-1;
+              box-shadow:0 0 20px rgba(0,0,0,0.8);
+              top:50%;
+              bottom:0;
+              left:10px;
+              right:10px;
+              border-radius:100px / 10px;
+          }
   </style>
 </head>
 <body>
   <div>
-    <img src="Logo.jpg" alt="Bryce Payne Logo">
+    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "Effect6">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
