--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <div>
-    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "effect6">
+    <img src="Logo.jpg" alt="Bryce Payne Logo" class= effect6>
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
