--- a/index.html
+++ b/index.html
@@ -30,28 +30,36 @@
         color: yellow;
       }
     }
-        .effect6
-          {
-              position:relative;       
-                  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-          }
-        .effect6:before, .effect6:after
-          {
-            content:"";
-              position:absolute; 
-              z-index:-1;
-              box-shadow:0 0 20px rgba(0,0,0,0.8);
-              top:50%;
-              bottom:0;
-              left:10px;
-              right:10px;
-              border-radius:100px / 10px;
-          }
+
+    .effect6
+    {
+      position: relative;
+    }
+    .effect6:before, .effect5:after
+    {
+      z-index: -1;
+      position: absolute;
+      content: "";
+      bottom: 25px;
+      left: 10px;
+      width: 50%;
+      top: 80%;
+      max-width:300px;
+      background: #777;
+      box-shadow: 0 35px 20px #777;
+      transform: rotate(-8deg);
+    }
+    .effect5:after
+    {
+      transform: rotate(8deg);
+      right: 10px;
+      left: auto;
+    }
   </style>
 </head>
 <body>
   <div>
-    <img src="Logo.jpg" alt="Bryce Payne Logo" class= effect6>
+    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "effect6">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
