--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
       font-size: 200%;
-      background-color: green;
+      background-color: whitesmoke;
     }
     img {
       position: relative;
