--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       height: auto;
       margin: 75px auto 0 auto;
       background-color: green;
-      border: 10px darkgreen;
-      border-style: ridge;
+      /*border: 10px darkgreen;
+      border-style: ridge;*/
     }
     p {
       text-align: center; 
