--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
   <div>
-    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "effect5">
+    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "box effect5">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
