--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
         color: yellow;
       }
     }
-
+    .box h3{
+      text-align:center;
+      position:relative;
+      top:80px;
+    }
+    .box {
+      width:70%;
+      height:200px;
+      background:#FFF;
+      margin:40px auto;
+    }
     .effect5
     {
       position: relative;
