--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       top:80px;
     }
     .box {
-      width:70%;
-      height:200px;
+      width:25%;
+      height:auto;
       background:#FFF;
       margin:40px auto;
     }
