--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   </style>
 </head>
 <body>
-  <div>
-    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "box effect5">
+  <div class="box effect5">
+    <img src="Logo.jpg" alt="Bryce Payne Logo">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
