--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="box effect5">
-    <img src="Logo.jpg" alt="Bryce Payne Logo">
+    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "effect5">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
