--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     img {
       position: relative;
       display: block;
-      width: 25%;
+      width: 100%;
       height: auto;
-      margin: 75px auto 0 auto;
+      /*margin: 75px auto 0 auto;
       background-color: green;
-      /*border: 10px darkgreen;
+      border: 10px darkgreen;
       border-style: ridge;*/
     }
     p {
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="box effect5">
-    <img src="Logo.jpg" alt="Bryce Payne Logo" class= "effect5">
+    <img src="Logo.jpg" alt="Bryce Payne Logo">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
