--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       width: 100%;
       height: auto;
       /*margin: 75px auto 0 auto;
-      background-color: green;*/
+      background-color: green;
       border: 10px darkgreen;
-      border-style: ridge;
+      border-style: ridge;*/
     }
     p {
       text-align: center; 
