--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         color: yellow;
       }
     }
-    .box h3{
+    .box img{
       text-align:center;
       position:relative;
       top:80px;
