--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .box img{
       text-align:center;
       position:relative;
-      top:80px;
+      /*top:80px;*/
     }
     .box {
       width:25%;
