--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
       margin: 0 auto;
       font-family: 'Yatra One', cursive;
       font-size: 200%;
-      background-color: whitesmoke;
+      background-color: darkgreen;/*whitesmoke;*/
     }
     img {
       position: relative;
       display: block;
       width: 100%;
       height: auto;
-      /*margin: 75px auto 0 auto;
+      margin: 75px auto 0 auto;
       background-color: green;
       border: 10px darkgreen;
-      border-style: ridge;*/
+      border-style: ridge;
     }
     p {
       text-align: center; 
