--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       position: absolute;
       content: "";
       bottom: 25px;
-      left: relative; /*10px;*/
+      left: auto;/*10px;*/
       width: 50%;
       top: 80%;
       max-width:300px;
