--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     .effect5:before, .effect5:after
     {
       z-index: -1;
-      position: absolute;
+      position: relative;
       content: "";
       bottom: 25px;
-      left: auto;/*10px;*/
+      left: 10px;
       width: 50%;
       top: 80%;
       max-width:300px;
