--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       display: block;
       width: 100%;
       height: auto;
-      margin: 75px auto 0 auto;
+      /*margin: 75px auto 0 auto;
       background-color: green;
       border: 10px darkgreen;
-      border-style: ridge;
+      border-style: ridge;*/
     }
     p {
       text-align: center; 
@@ -47,7 +47,7 @@
     .effect5:before, .effect5:after
     {
       z-index: -1;
-      position: relative;
+      position: absolute;
       content: "";
       bottom: 25px;
       left: 10px;
