--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       border-style: ridge;*/
     }
     p {
-      text-align: center; 
+      text-align: center;
+      color: beige;
     }
     @media screen and (max-width: 735px){
       p {
         font-size: 60%; 
-        color: yellow;
       }
     }
     .box img{
