--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     }
     p {
       text-align: center;
-      color: beige;
+      color: rgb(199, 138, 116);
+      text-shadow: 1px 1px black;
     }
     @media screen and (max-width: 735px){
       p {
