--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
   <div class="box effect5">
-    <img src="Logo.jpg" alt="Bryce Payne Logo">
+    <img src="Logo.lpop" alt="Bryce Payne Logo">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
