--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       background-color: green;*/
       border: 10px;
       border-style: ridge;
+      background: transparent;
     }
     p {
       text-align: center;
