--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       width: 100%;
       height: auto;
       /*margin: 75px auto 0 auto;
-      background-color: green;*/
+      background-color: green;
       border: 10px;
-      border-style: ridge;
+      border-style: ridge;*/
       background: transparent;
     }
     p {
