--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <div class="box effect5">
-    <img src="Logo3.tiff" alt="Bryce Payne Logo">
+    <img src="Logo3.gif" alt="Bryce Payne Logo">
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
