--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   </div>
   <div>
     <p>Under construction. Please check back soon!</p>
+    <img src="Logo3.gif" alt="Bryce Payne Logo">
   </div>
 </body>
 </html>
