--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       width: 95%;
       margin: 0 auto;
       font-size: 200%;
-      background-color: darkgreen;/*whitesmoke;*/
+      background-color: /*darkgreen;*/whitesmoke;
     }
     img {
       position: relative;
