--- a/brycedpayne_website.html
+++ b/brycedpayne_website.html
@@ -17,10 +17,11 @@
 <body>
 
 <!--***********************************************   start navbar    ************************************************-->
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand my-brand" href="#">Bryce D. Payne</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<a id="top"></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+    <a class="navbar-brand" id="my-brand" href="#">Bryce D. Payne</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,10 +41,54 @@
         </ul>
     </div>
 </nav>
-
 <!--************************************************   end navbar    *************************************************-->
 
 
+<!--************************************************   start main    *************************************************-->
+<div class="bgimg-1">
+    <div class="caption">
+        <span class="border text-center">scroll down</span>
+    </div>
+</div>
+<div class="content">
+    <h3 style="text-align:center;">Parallax Demo</h3>
+    <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
+        foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
+        posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
+        dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam
+        pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum
+        at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate
+        at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis
+        ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor
+        placerat leo.</p>
+</div>
+<div class="container">
+
+    <div class="text-center">
+        <h4>Hello World! You have arrived at the website of Full Stack Web Developer</h4>
+        <h4><strong> Bryce D. Payne</strong></h4>
+        <br>
+        <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
+        <a href="Bryce D Payne Resume.pdf">My Resume</a>
+    </div>
+</div>
+
+<div class="bgimg-2">
+    <div class="caption">
+        <span class="border text-center">scroll down more</span>
+    </div>
+</div>
+<div style="position:relative;">
+    <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+    </div>
+</div>
+
+<div>
+    <a href="#top">Return to top</a>
+</div>
+
+<!--************************************************    end main     *************************************************-->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
