--- a/brycedpayne_website.html
+++ b/brycedpayne_website.html
@@ -30,13 +30,13 @@
                 <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="#background">Background</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#info">Additional Information</a>
+                <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#add_info">Additional Information</a>
             </li>
         </ul>
     </div>
@@ -46,77 +46,119 @@
 
 <!--************************************************   start main    *************************************************-->
 
-<!--parallax img 1-->
-<div class="bgimg-1">
-    <div class="caption text-center">
-        <span class="border text-center">scroll down</span>
+<div class="main">
+    <!--parallax img 1-->
+    <div class="bgimg-1">
+        <div class="caption text-center">
+            <span class="border text-center">scroll down</span>
+        </div>
     </div>
-</div>
-<!--end parallax img 1-->
+    <!--end parallax img 1-->
 
-<!--scrolling content-->
-<div class="content text-center" id="home">
-    <h3>Welcome!</h3>
-    <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
-        foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
-        posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
-        dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam
-        pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum
-        at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate
-        at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis
-        ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor
-        placerat leo.</p>
-    <div class="rtt text-center">
-        <a href="#top">Top</a>
-    </div>
-</div>
-<!--end scrolling content-->
-
-<!--parallax img 2-->
-<div class="bgimg-2">
-    <div class="caption text-center my-auto">
-        <span class="border text-center">scroll down</span>
-    </div>
-</div>
-<!--end parallax img 2-->
-
-<!--scrolling content-->
-<div class="container content" id="background">
-
-    <div class="text-center">
-        <h4>Hello World! You have arrived at the website of Full Stack Web Developer</h4>
-        <h4><strong> Bryce D. Payne</strong></h4>
-        <br>
-        <a href="Bryce D Payne Resume.pdf">My Resume</a>
-        <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
+    <!--scrolling content-->
+    <div class="content text-center" id="home">
+        <h3>Welcome!</h3>
+        <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
+            foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
+            posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
+            dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur
+            aliquam
+            pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus
+            vestibulum
+            at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla
+            vulputate
+            at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum
+            sociis
+            ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta
+            porttitor
+            placerat leo.</p>
+        <div class="text-center">
+            <a href="#background"> Background ></a>
+        </div>
         <div class="rtt text-center">
             <a href="#top">Top</a>
         </div>
     </div>
-</div>
-<!--end scrolling content-->
+    <!--end scrolling content-->
 
-<!--parallax img 3-->
-<div class="bgimg-3">
-    <div class="caption">
-        <span class="border text-center">scroll down</span>
-    </div>
-</div>
-<!--end parallax img 3-->
-
-<!--footer-->
-<div class="content">
-    <div>
-        <div class="rtt text-center">
-            <a href="#top">Return to top</a>
-            <p>&copy; 2020 BryceDPayne.com</p>
+    <!--parallax img 2-->
+    <div class="bgimg-2">
+        <div class="caption text-center">
+            <span class="border text-center">scroll down</span>
         </div>
     </div>
+    <!--end parallax img 2-->
+
+    <!--scrolling content-->
+    <div class="container content" id="background">
+
+        <div class="text-center">
+            <h4>Hello World! You have arrived at the website of Full Stack Web Developer</h4>
+            <h4><strong> Bryce D. Payne</strong></h4>
+            <br>
+            <a href="Bryce D Payne Resume.pdf">My Resume</a>
+            <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
+            <div class="rtt text-center">
+                <div class="text-center">
+                    <a href="#home">< Home </a> <a href="#projects"> Projects ></a>
+                </div>
+                <a href="#top"> Top </a>
+            </div>
+        </div>
+    </div>
+    <!--end scrolling content-->
+
+    <!--parallax img 3-->
+    <div class="bgimg-3">
+        <div class="caption">
+            <span class="border text-center">scroll down</span>
+        </div>
+    </div>
+    <!--end parallax img 3-->
+
+    <!--scrolling content-->
+    <div class="container content" id="projects">
+
+        <div class="text-center">
+            <h4>Hello World! You have arrived at the website of Full Stack Web Developer</h4>
+            <h4><strong> Bryce D. Payne</strong></h4>
+            <br>
+            <a href="Bryce D Payne Resume.pdf">My Resume</a>
+            <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
+            <div class="rtt text-center">
+                <div class="text-center">
+                    <a href="#background">< Background </a> <a href="#add_info"> Additional Info ></a>
+                </div>
+                <a href="#top"> Top </a>
+            </div>
+        </div>
+    </div>
+    <!--end scrolling content-->
+
+    <!--parallax img 4-->
+    <div class="bgimg-1">
+        <div class="caption text-center">
+            <span class="border text-center">scroll down</span>
+        </div>
+    </div>
+    <!--end parallax img 4-->
+
+    <!--footer-->
+    <div class="content">
+        <div>
+            <div class="text-center" id="add_info">
+                <a href="#projects">< Projects </a>
+                <p>&copy; 2020 BryceDPayne.com</p>
+            </div>
+            <div class="rtt text-center">
+                <a href="#top">Return to top</a>
+            </div>
+        </div>
+    </div>
+    <!--end footer-->
 </div>
-<!--end footer-->
 
 <!--************************************************    end main     *************************************************-->
-
 
 
 <!-- Optional JavaScript -->
