--- a/brycedpayne_website.html
+++ b/brycedpayne_website.html
@@ -72,10 +72,10 @@
             porttitor
             placerat leo.</p>
         <div class="text-center">
-            <a href="#background"> Background ></a>
+            <button type="button" class="btn btn-secondary btn-sm"><a href="#background">Background</a></button>
         </div>
         <div class="rtt text-center">
-            <a href="#top">Top</a>
+            <button type="button" class="btn btn-secondary btn-sm mt-2"><a href="#top">Top</a></button>
         </div>
     </div>
     <!--end scrolling content-->
@@ -98,10 +98,25 @@
             <a href="Bryce D Payne Resume.pdf">My Resume</a>
             <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
             <div class="rtt text-center">
-                <div class="text-center">
-                    <a href="#home">< Home </a> <a href="#projects"> Projects ></a>
+                <!--                <div class="text-center">-->
+                <!--                    <button type="button" class="btn btn-secondary btn-sm"><a href="#home">Home</a></button>-->
+                <!--                    <button type="button" class="btn btn-secondary btn-sm"><a href="#projects">Projects</a></button>-->
+                <!--                </div>-->
+                <div class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
+                    <a href="#home">
+                        <label class="btn btn-secondary btn-sm">
+                            Home
+                        </label>
+                    </a>
+                    <a href="#projects">
+                        <label class="btn btn-secondary btn-sm">
+                        Projects
+                    </label>
+                    </a>
                 </div>
-                <a href="#top"> Top </a>
+                <div class="rtt text-center">
+                    <button type="button" class="btn btn-secondary btn-sm mt-2"><a href="#top">Top</a></button>
+                </div>
             </div>
         </div>
     </div>
@@ -124,11 +139,18 @@
             <br>
             <a href="Bryce D Payne Resume.pdf">My Resume</a>
             <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary btn-sm">
+                    <a href="#background">Background</a>
+                </label>
+                <label class="btn btn-secondary btn-sm">
+                    <a href="#add_info">Additional Info</a>
+                </label>
+            </div>
             <div class="rtt text-center">
-                <div class="text-center">
-                    <a href="#background">< Background </a> <a href="#add_info"> Additional Info ></a>
-                </div>
-                <a href="#top"> Top </a>
+                <a href="#top">
+                    <button type="button" class="btn btn-secondary btn-sm mt-2">Top</button>
+                </a>
             </div>
         </div>
     </div>
@@ -150,7 +172,7 @@
                 <p>&copy; 2020 BryceDPayne.com</p>
             </div>
             <div class="rtt text-center">
-                <a href="#top">Return to top</a>
+                <button type="button" class="btn btn-secondary btn-sm mt-2"><a href="#top"> Top </a></button>
             </div>
         </div>
     </div>
