changed button design

--- a/brycedpayne_website.html
+++ b/brycedpayne_website.html
@@ -72,10 +72,10 @@
             porttitor
             placerat leo.</p>
         <div class="text-center">
-            <button type="button" class="btn btn-secondary btn-sm"><a href="#background">Background</a></button>
+            <a href="#background" class="text-center btn btn-secondary btn-sm">Background</a>
         </div>
         <div class="rtt text-center">
-            <button type="button" class="btn btn-secondary btn-sm mt-2"><a href="#top">Top</a></button>
+            <a href="#top" type="button" class="btn btn-secondary btn-sm mt-2">Top</a>
         </div>
     </div>
     <!--end scrolling content-->
@@ -94,6 +94,7 @@
         <div class="text-center">
             <h4>Hello World! You have arrived at the website of Full Stack Web Developer</h4>
             <h4><strong> Bryce D. Payne</strong></h4>
+            <h6>Background</h6>
             <br>
             <a href="Bryce D Payne Resume.pdf">My Resume</a>
             <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
@@ -103,19 +104,11 @@
                 <!--                    <button type="button" class="btn btn-secondary btn-sm"><a href="#projects">Projects</a></button>-->
                 <!--                </div>-->
                 <div class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
-                    <a href="#home">
-                        <label class="btn btn-secondary btn-sm">
-                            Home
-                        </label>
-                    </a>
-                    <a href="#projects">
-                        <label class="btn btn-secondary btn-sm">
-                        Projects
-                    </label>
-                    </a>
+                    <a href="#home" class="btn btn-secondary btn-sm">Home</a>
+                    <a href="#projects" class="btn btn-secondary btn-sm">Projects</a>
                 </div>
                 <div class="rtt text-center">
-                    <button type="button" class="btn btn-secondary btn-sm mt-2"><a href="#top">Top</a></button>
+                    <a href="#top" type="button" class="btn btn-secondary btn-sm mt-2">Top</a>
                 </div>
             </div>
         </div>
@@ -140,17 +133,11 @@
             <a href="Bryce D Payne Resume.pdf">My Resume</a>
             <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
             <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary btn-sm">
-                    <a href="#background">Background</a>
-                </label>
-                <label class="btn btn-secondary btn-sm">
-                    <a href="#add_info">Additional Info</a>
-                </label>
+                <a href="#background" class="btn btn-secondary btn-sm">Background</a>
+                <a href="#add_info" class="btn btn-secondary btn-sm">Additional Info</a>
             </div>
             <div class="rtt text-center">
-                <a href="#top">
-                    <button type="button" class="btn btn-secondary btn-sm mt-2">Top</button>
-                </a>
+                <a href="#top" type="button" class="btn btn-secondary btn-sm mt-2">Top</a>
             </div>
         </div>
     </div>
@@ -172,7 +159,7 @@
                 <p>&copy; 2020 BryceDPayne.com</p>
             </div>
             <div class="rtt text-center">
-                <button type="button" class="btn btn-secondary btn-sm mt-2"><a href="#top"> Top </a></button>
+                <a href="#top" type="button" class="btn btn-secondary btn-sm mt-2">Top</a>
             </div>
         </div>
     </div>
