--- a/brycedpayne_website.html
+++ b/brycedpayne_website.html
@@ -11,6 +11,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bdp_stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Bryce D Payne - Home</title>
 </head>
@@ -98,11 +99,8 @@
             <br>
             <a href="Bryce D Payne Resume.pdf">My Resume</a>
             <p>Due to unusually high volume, we are currently under construction. Please check back soon.</p>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequatur debitis, deserunt dignissimos ex expedita fuga magnam minima nisi obcaecati pariatur possimus praesentium provident, quia quibusdam sit ut. Nam, reprehenderit?</span><span>A adipisci autem commodi cumque ea eligendi est, eum hic magni nisi odit possimus praesentium quae recusandae repellendus, repudiandae sequi tempora velit veniam voluptas! Ab debitis distinctio illum molestiae unde.</span><span>Ab accusamus asperiores beatae culpa deleniti dicta earum et expedita facilis fuga id, illo ipsam laboriosam laudantium maxime minus nesciunt nulla odio placeat quod ratione rerum sapiente totam ut voluptatum.</span></p>
             <div class="rtt text-center">
-                <!--                <div class="text-center">-->
-                <!--                    <button type="button" class="btn btn-secondary btn-sm"><a href="#home">Home</a></button>-->
-                <!--                    <button type="button" class="btn btn-secondary btn-sm"><a href="#projects">Projects</a></button>-->
-                <!--                </div>-->
                 <div class="btn-group btn-group-toggle btn-group-sm" data-toggle="buttons">
                     <a href="#home" class="btn btn-secondary btn-sm">Home</a>
                     <a href="#projects" class="btn btn-secondary btn-sm">Projects</a>
@@ -154,13 +152,24 @@
     <!--footer-->
     <div class="content">
         <div>
+
+            <div class="text-center" id="contact">
+                    <a class="socMedLink" href=""><i class="fa fa-facebook-square"></i></a>
+                    <a class="socMedLink" href=""><i class="fa fa-twitter-square"></i></a>
+                    <a class="socMedLink" href=""><i class="fa fa-linkedin-square"></i></a>
+                    <a class="socMedLink" href=""><i class="fa fa-github-square"></i></a>
+                    <a class="socMedLink" href=""><i class="fa fa-envelope-square"></i></a>
+            </div>
+
+            <div class="rtt text-center">
+                <a href="#top" type="button" class="btn btn-secondary btn-sm mt-2">Top</a>
+            </div>
+
             <div class="text-center" id="add_info">
                 <a href="#projects">< Projects </a>
                 <p>&copy; 2020 BryceDPayne.com</p>
             </div>
-            <div class="rtt text-center">
-                <a href="#top" type="button" class="btn btn-secondary btn-sm mt-2">Top</a>
-            </div>
+
         </div>
     </div>
     <!--end footer-->
